--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -102,3 +101,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+.DS_Store
+_local
+_export
